apps/gitlab/svc-elasticsearch.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: v1
kind: Service
metadata:
  name: gitlab-elasticsearch
  namespace: gitlab
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: gitlab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
