apps/gitlab/svc-rustfs.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: v1
kind: Service
metadata:
  name: rustfs
  namespace: gitlab
  labels:
    app.kubernetes.io/name: rustfs
    app.kubernetes.io/part-of: gitlab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rustfs
  ports:
    - name: s3
      port: 9000
      targetPort: 9000
