apps/gitlab/svc-valkey.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: v1
kind: Service
metadata:
  name: gitlab-valkey
  namespace: gitlab
  labels:
    app.kubernetes.io/name: valkey
    app.kubernetes.io/part-of: gitlab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: valkey
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
